# slither-gym

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/slither_gym/: __init__.py
src/slither_gym/envs/: __init__.py  _spaces.py  slither_env.py
src/slither_gym/game/: __init__.py  constants.py  enums.py  game_session.py  types.py
src/slither_gym/game/hooks/: __init__.py  act.js  game-state.js  get-player-count.js  get-server-ids.js  poll-observation.js  set-boost.js  set-heading.js  set-quality.js  set-skin.js
src/slither_gym/spaces/: __init__.py  action.py  food.py  minimap.py  observation.py  slither.py  slither_segment.py
src/slither_gym/wrappers/: __init__.py  use_trigonometric_action.py
src/slither_gym/wrappers/vector/: __init__.py  use_trigonometric_vector_action.py
