[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slither-gym"
version = "0.0.0"
description = "A Slither.io Gymnasium environment"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: MIT License",
]
authors = [{ name = "Onno Verberne" }]
license-files = ["LICENSE"]
keywords = ["Reinforcement Learning", "Slither.io"]
dependencies = ["gymnasium ==1.2.3", "numpy ==2.4.0", "playwright ==1.57.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"slither_gym.game.hooks" = ["*.js"]

[tool.pyright]
typeCheckingMode = "strict"

[tool.black]
line-length = 100
skip-string-normalization = true
